@@ -1,3 +1,7 @@
+2014-05-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* win32lib.c: Update win32_popen() (w32 only).
+
 2014-05-05  Karl Berry  <karl@tug.org>
 
 	* doc/kpathsea.texi,
